<resources>
    <string name="app_name">FinalProject</string>
    <!--Main Activity-->
    <string name="actionBtn_txt">Filter Recipes</string>

    <!--Activity 2 // Shopping List-->
    <string name="nxtBtn_txt">Go to How-To Prepare</string>

    <!--Activity 3 // How-To-->
    <string name="ingredient_txt">Ingredients</string>
    <string name="instruction_txt">How to Prepare</string>

    <!--Activity Four // Filter-->
    <string name="protein_txt">Pick your protein:</string>
    <string name="beef_RD_txt">Beef</string>
    <string name="chick_RD_txt">Chicken</string>
    <string name="fish_RD_txt">Fish</string>
    <string name="pork_RD_txt">Pork</string>

    <string name="addition_txt">Additional Ingredient:</string>
    <string name="carb_noodles">Noodles</string>
    <string name="carb_rice">Rice</string>

    <string name="time_text">How much time do you have?</string>
    <string name="time_hint">Time in Minutes</string>

    <string name="calorie_txt">Would you like a low-calorie recipe?</string>
    <string name="calorie_yes">Yes</string>
    <string name="calorie_no">No</string>

    <string name="filter_btn_txt">Filter Recipes</string>
    <string name="dillDumpling_img_alt">Servings of the Dill and Dumpling soup</string>
</resources>